--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -2,10 +2,12 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+   
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
     <div>hello from index</div>
+    <script src="index.js"></script>
 </body>
 </html>
