adds ajax example

--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -5,9 +5,12 @@
    
     <meta charset="utf-8" />
     <title></title>
+    <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div>hello from index</div>
+    <button class="helloButton">click me</button>
+    <div class="hello"></div>
     <script src="index.js"></script>
 </body>
 </html>
