adds post method example

--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -11,6 +11,8 @@
     <div>hello from index</div>
     <button class="helloButton">click me</button>
     <div class="hello"></div>
+    <input class="testInput" />
+    <button class="postTest">post this</button>
     <script src="index.js"></script>
 </body>
 </html>
