ads reddit video

--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -13,6 +13,14 @@
     <div class="hello"></div>
     <input class="testInput" />
     <button class="postTest">post this</button>
+    <button class="showVideo">show me a video</button>
+    <div class="video">
+        <!--<iframe class="videoFrame" width="420" height="315"
+        src="">-->
+   <!-- </iframe>-->
+
+    </div>
+    <video></video>
     <script src="index.js"></script>
 </body>
 </html>
