new routes foquestion and buildingr

--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -20,6 +20,7 @@
    <!-- </iframe>-->
 
     </div>
+    <button class="getId">getId</button>
     <video></video>
     <script src="index.js"></script>
 </body>
