--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -2,12 +2,17 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-   
+
     <meta charset="utf-8" />
     <title></title>
     <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 </head>
 <body>
+    <a href="Layout.html">Layout.html</a>
+    <br>
+    <a href="LayoutII.html">LayoutII.html</a>
+    <br>
+    <a href="shortcode_accordion_and_tabs.html">HOME</a>
     <div>hello from index</div>
     <button class="helloButton">click me</button>
     <div class="hello"></div>
