--- a/MSHappiness/public/Layout.html
+++ b/MSHappiness/public/Layout.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-
+    <h1>hello {{greeting}}</h1>
     <div class="section group">
         <div class="col questionCols">
             <h3>Are you satisfied with the beverage options in your building?</h3>
