--- a/MSHappiness/public/LayoutII.html
+++ b/MSHappiness/public/LayoutII.html
@@ -1,8 +1,10 @@
 ﻿<!DOCTYPE html>
+<html>
+
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!-->
-<html lang="en">
+
 <!--<![endif]-->
 <head>
     <title>Accordion &amp; Tabs | Unify - Responsive Website Template</title>
@@ -54,7 +56,7 @@
 </head>
 
 <body class="header-fixed header-fixed-space promo-padding-top sliding-panel-ini sliding-panel-flag-right">
-    <div class="wrapper">
+    <div  class="wrapper">
         <!--=== Header v6 ===-->
         <div class="header-v6 header-classic-white header-sticky">
             <!-- Navbar -->
