--- a/MSHappiness/public/index.html
+++ b/MSHappiness/public/index.html
@@ -1,13 +1,16 @@
 ﻿<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html ng-app xmlns="http://www.w3.org/1999/xhtml">
 <head>
 
     <meta charset="utf-8" />
     <title></title>
-    <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
+  <!--   <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script> -->
+
 </head>
 <body>
+  <div >
+      <h1>{{greeting}}</h1>
     <a href="Layout.html">Layout.html</a>
     <br>
     <a href="LayoutII.html">LayoutII.html</a>
@@ -18,6 +21,9 @@
     <div class="hello"></div>
     <input class="testInput" />
     <button class="postTest">post this</button>
-    <script src="index.js"></script>
+
+
+    <!-- <script src="index.js"></script> -->
+  </div>
 </body>
 </html>
