--- a/MSHappiness/public/shortcode_accordion_and_tabs.html
+++ b/MSHappiness/public/shortcode_accordion_and_tabs.html
@@ -247,25 +247,25 @@
                                     <div class="col-md-12">
                                         <div class="panel-body">
                                             <!-- Pie Charts v1 -->
-                                            <div class="row pie-progress-charts margin-bottom-60">
-                                                <div class="inner-pchart col-md-4">
-                                                    <a id="positiveBtn" role="button" onclick="hideButton()" class="btn btn-default" ng-click="test('circle-1',$event)">
+                                            <div class="row pie-progress-charts margin-bottom-60" ng-click="answered('01','positive')">
+                                                <div class="inner-pchart col-md-4" >
+                                                    <a id="positiveBtn" role="button"  class="btn btn-default" ng-hide ="questions['01'].answered">
                                                         <i class="fa fa-smile-o"></i>
                                                     </a>
-                                                    <div class="circle" id="circle-1">
+                                                    <div class="circle" id="q01Positive">
                                                     </div>
                                                 </div>
                                                 <div class="inner-pchart col-md-4">
-                                                    <a id="neutralBtn" role="button" onclick="hideButton()" class="btn btn-default" ng-click="test('circle-2',$event)">
+                                                    <a id="neutralBtn" role="button" class="btn btn-default" ng-click="test('circle-2',$event)" ng-hide ="questions['01'].answered">
                                                         <i class="fa fa-meh-o"></i>
                                                     </a>
-                                                    <div class="circle" id="circle-2"></div>
+                                                    <div class="circle" id="q01Neutral"></div>
                                                 </div>
                                                 <div class="inner-pchart col-md-4">
-                                                    <a id="negativeBtn" role="button" onclick="hideButton()" class="btn btn-default" ng-click="test('circle-3',$event)">
+                                                    <a id="negativeBtn" role="button"  class="btn btn-default" ng-click="test('circle-3',$event)" ng-hide ="questions['01'].answered">
                                                         <i class="fa fa-frown-o"></i>
                                                     </a>
-                                                    <div class="circle" id="circle-3"></div>
+                                                    <div class="circle" id="q01Negative"></div>
 
                                                 </div>
                                             </div>
@@ -511,13 +511,13 @@
 
 
     <script type="text/javascript">
-        jQuery(document).ready(function () {
-            App.init();
-            new WOW().init();
-            StyleSwitcher.initStyleSwitcher();
-            CirclesMaster.initCirclesMaster1();
-            CirclesMaster.initCirclesMaster2();
-        });
+        // jQuery(document).ready(function () {
+        //     App.init();
+        //     new WOW().init();
+        //     StyleSwitcher.initStyleSwitcher();
+        //     CirclesMaster.initCirclesMaster1();
+        //     CirclesMaster.initCirclesMaster2();
+        // });
 
         var $offset = 0;
         $offset = $(".navbar-fixed-top").height() + 12;
@@ -542,6 +542,5 @@
             <script src="assets/plugins/html5shiv.js"></script>
             <script src="assets/plugins/placeholder-IE-fixes.js"></script>
             <![endif]-->
-
 </body>
 </html>
