Removed borders around questions and added toggle arrows

--- a/MSHappiness/public/shortcode_accordion_and_tabs.html
+++ b/MSHappiness/public/shortcode_accordion_and_tabs.html
@@ -229,45 +229,47 @@
                 <div class="col-md-12">
                     <!-- Accordion v1 -->
                     <div class="panel-group acc-v1" id="accordion-1">
-                        <!--<div class="panel panel-default">-->
                         <div class="panel-heading">
-                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-1" href="#collapse-One">
+                            <a id="question1" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-1" href="#collapse-One">
                                 <div class="section group">
                                     <div class="col-md-12" style="text-align:center">
                                         <h3>Are you satisfied with the beverage options in your building?</h3>
-                                        <i class="fa fa-angle-double-down" aria-hidden="true"></i>
+                                        <i id="downArrow1" class="fa fa-angle-double-down" aria-hidden="true"></i>
+                                        <i id="upArrow1" class="fa fa-angle-double-up" aria-hidden="true"></i>
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <!--</div>-->
-                        <div id="collapse-One" class="panel-collapse collapse in">
+
+                        <hr>
+
+                        <div id="collapse-One" class="panel-collapse collapse">
                             <div class="panel-body">
                                 <div class="row">
                                     <div class="col-md-12">
                                         <div class="panel-body">
                                             <!-- Pie Charts v1 -->
                                             <div class="row pie-progress-charts margin-bottom-60" ng-click="answered('01','positive')">
-                                            <div class="inner-pchart col-md-4" >
-                                            <a id="positiveBtn" role="button"  class="btn btn-default" ng-hide ="questions['01'].answered">
-                                            <i class="fa fa-smile-o"></i>
-                                            </a>
-                                            <div class="circle" id="q01Positive">
-                                            </div>
-                                            </div>
+                                                <div class="inner-pchart col-md-4">
+                                                    <a id="positiveBtn" role="button" class="btn btn-default" ng-hide="questions['01'].answered">
+                                                        <i class="fa fa-smile-o"></i>
+                                                    </a>
+                                                    <div class="circle" id="q01Positive">
+                                                    </div>
+                                                </div>
 
-                                            <div class="inner-pchart col-md-4">
-                                            <a id="neutralBtn" role="button" class="btn btn-default" ng-click="test('circle-2',$event)" ng-hide ="questions['01'].answered">
-                                            <i class="fa fa-meh-o"></i>
-                                            </a>
-                                            <div class="circle" id="q01Neutral"></div>
-                                            </div>
-                                            <div class="inner-pchart col-md-4">
-                                            <a id="negativeBtn" role="button"  class="btn btn-default" ng-click="test('circle-3',$event)" ng-hide ="questions['01'].answered">
-                                            <i class="fa fa-frown-o"></i>
-                                            </a>
-                                            <div class="circle" id="q01Negative"></div>
-                                            </div>
+                                                <div class="inner-pchart col-md-4">
+                                                    <a id="neutralBtn" role="button" class="btn btn-default" ng-click="test('circle-2',$event)" ng-hide="questions['01'].answered">
+                                                        <i class="fa fa-meh-o"></i>
+                                                    </a>
+                                                    <div class="circle" id="q01Neutral"></div>
+                                                </div>
+                                                <div class="inner-pchart col-md-4">
+                                                    <a id="negativeBtn" role="button" class="btn btn-default" ng-click="test('circle-3',$event)" ng-hide="questions['01'].answered">
+                                                        <i class="fa fa-frown-o"></i>
+                                                    </a>
+                                                    <div class="circle" id="q01Negative"></div>
+                                                </div>
                                             </div>
                                             <!-- End Pie Charts v1 -->
                                         </div>
@@ -278,43 +280,43 @@
                     </div>
 
                     <div class="panel-group acc-v1" id="accordion-2">
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-2" href="#collapse-Two">
-                                    <div class="section group">
-                                        <div class="col-md-12" style="text-align:center">
-                                            <h3>Do you think your cafe is in need of healthier food options?</h3>
-                                            <i class="fa fa-angle-double-down" aria-hidden="true"></i>
-                                        </div>
+                        <div class="panel-heading">
+                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-2" href="#collapse-Two">
+                                <div class="section group">
+                                    <div class="col-md-12" style="text-align:center">
+                                        <h3>Are you satisfied with the beverage options in your building?</h3>
+                                        <i id="downArrow1" class="fa fa-angle-double-down" aria-hidden="true" onclick="hideButtonQ1"></i>
                                     </div>
-                                </a>
-                            </div>
-                            <div id="collapse-Two" class="panel-collapse collapse">
-                                <div class="panel-body">
-                                    <!-- Pie Charts v1 -->
-                                    <div class="row pie-progress-charts margin-bottom-60">
-                                        <div class="inner-pchart col-md-4">
-                                            <a id="positiveBtn2" role="button" onclick="hideButtonQ2()" class="btn btn-default" ng-click="test('circle-1',$event)">
-                                                <i class="fa fa-smile-o"></i>
-                                            </a>
-                                            <div class="circle" id="circle-1">
-                                            </div>
-                                        </div>
-                                        <div class="inner-pchart col-md-4">
-                                            <a id="neutralBtn2" role="button" onclick="hideButtonQ2()" class="btn btn-default" ng-click="test('circle-2',$event)">
-                                                <i class="fa fa-meh-o"></i>
-                                            </a>
-                                            <div class="circle" id="circle-2"></div>
-                                        </div>
-                                        <div class="inner-pchart col-md-4">
-                                            <a id="negativeBtn2" role="button" onclick="hideButtonQ2()" class="btn btn-default" ng-click="test('circle-3',$event)">
-                                                <i class="fa fa-frown-o"></i>
-                                            </a>
-                                            <div class="circle" id="circle-3"></div>
-                                        </div>
-                                    </div>
-                                    <!-- End Pie Charts v1 -->
                                 </div>
+                            </a>
+                        </div>
+
+                        <hr>
+                        <div id="collapse-Two" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <!-- Pie Charts v1 -->
+                                <div class="row pie-progress-charts margin-bottom-60">
+                                    <div class="inner-pchart col-md-4">
+                                        <a id="positiveBtn2" role="button" onclick="hideButtonQ2()" class="btn btn-default" ng-click="test('circle-1',$event)">
+                                            <i class="fa fa-smile-o"></i>
+                                        </a>
+                                        <div class="circle" id="circle-1">
+                                        </div>
+                                    </div>
+                                    <div class="inner-pchart col-md-4">
+                                        <a id="neutralBtn2" role="button" onclick="hideButtonQ2()" class="btn btn-default" ng-click="test('circle-2',$event)">
+                                            <i class="fa fa-meh-o"></i>
+                                        </a>
+                                        <div class="circle" id="circle-2"></div>
+                                    </div>
+                                    <div class="inner-pchart col-md-4">
+                                        <a id="negativeBtn2" role="button" onclick="hideButtonQ2()" class="btn btn-default" ng-click="test('circle-3',$event)">
+                                            <i class="fa fa-frown-o"></i>
+                                        </a>
+                                        <div class="circle" id="circle-3"></div>
+                                    </div>
+                                </div>
+                                <!-- End Pie Charts v1 -->
                             </div>
                         </div>
                     </div>
@@ -322,43 +324,43 @@
             </div>
 
             <div class="panel-group acc-v1" id="accordion-3">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-3" href="#collapse-Four">
-                            <div class="section group">
-                                <div class="col-md-12" style="text-align:center">
-                                    <h3>Do you think your open office space improves your work day</h3>
-                                    <i class="fa fa-angle-double-down" aria-hidden="true"></i>
-                                </div>
+                <div class="panel-heading">
+                    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion-3" href="#collapse-Four">
+                        <div class="section group">
+                            <div class="col-md-12" style="text-align:center">
+                                <h3>Are you satisfied with the beverage options in your building?</h3>
+                                <i id="downArrow1" class="fa fa-angle-double-down" aria-hidden="true" onclick="hideButtonQ1"></i>
                             </div>
-                        </a>
-                    </div>
-                    <div id="collapse-Four" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <!-- Pie Charts v1 -->
-                            <div class="row pie-progress-charts margin-bottom-60">
-                                <div class="inner-pchart col-md-4">
-                                    <a id="positiveBtn3" role="button" onclick="hideButtonQ3()" class="btn btn-default" ng-click="test('circle-1',$event)">
-                                        <i class="fa fa-smile-o"></i>
-                                    </a>
-                                    <div class="circle" id="circle-1">
-                                    </div>
-                                </div>
-                                <div class="inner-pchart col-md-4">
-                                    <a id="neutralBtn3" role="button" onclick="hideButtonQ3()" class="btn btn-default" ng-click="test('circle-2',$event)">
-                                        <i class="fa fa-meh-o"></i>
-                                    </a>
-                                    <div class="circle" id="circle-2"></div>
-                                </div>
-                                <div class="inner-pchart col-md-4">
-                                    <a id="negativeBtn3" role="button" onclick="hideButtonQ3()" class="btn btn-default" ng-click="test('circle-3',$event)">
-                                        <i class="fa fa-frown-o"></i>
-                                    </a>
-                                    <div class="circle" id="circle-3"></div>
-                                </div>
-                            </div>
-                            <!-- End Pie Charts v1 -->
                         </div>
+                    </a>
+                </div>
+
+                <hr>
+                <div id="collapse-Four" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        <!-- Pie Charts v1 -->
+                        <div class="row pie-progress-charts margin-bottom-60">
+                            <div class="inner-pchart col-md-4">
+                                <a id="positiveBtn3" role="button" onclick="hideButtonQ3()" class="btn btn-default" ng-click="test('circle-1',$event)">
+                                    <i class="fa fa-smile-o"></i>
+                                </a>
+                                <div class="circle" id="circle-1">
+                                </div>
+                            </div>
+                            <div class="inner-pchart col-md-4">
+                                <a id="neutralBtn3" role="button" onclick="hideButtonQ3()" class="btn btn-default" ng-click="test('circle-2',$event)">
+                                    <i class="fa fa-meh-o"></i>
+                                </a>
+                                <div class="circle" id="circle-2"></div>
+                            </div>
+                            <div class="inner-pchart col-md-4">
+                                <a id="negativeBtn3" role="button" onclick="hideButtonQ3()" class="btn btn-default" ng-click="test('circle-3',$event)">
+                                    <i class="fa fa-frown-o"></i>
+                                </a>
+                                <div class="circle" id="circle-3"></div>
+                            </div>
+                        </div>
+                        <!-- End Pie Charts v1 -->
                     </div>
                 </div>
             </div>
@@ -488,13 +490,14 @@
 
 
     <script type="text/javascript">
-        // jQuery(document).ready(function () {
+        jQuery(document).ready(function () {
+            $('#upArrow1').hide();
         //     App.init();
         //     new WOW().init();
         //     StyleSwitcher.initStyleSwitcher();
         //     CirclesMaster.initCirclesMaster1();
         //     CirclesMaster.initCirclesMaster2();
-        // });
+         });
 
         var $offset = 0;
         $offset = $(".navbar-fixed-top").height() + 12;
@@ -507,23 +510,10 @@
             event.preventDefault();
         });
 
-        function hideButtonQ1() {
-            $("#positiveBtn1").hide();
-            $("#neutralBtn1").hide();
-            $("#negativeBtn1").hide();
-        };
+        $('#question1').click(function () {
+            $('#downArrow1, #upArrow1').toggle();
+        });
 
-        function hideButtonQ2() {
-            $("#positiveBtn2").hide();
-            $("#neutralBtn2").hide();
-            $("#negativeBtn2").hide();
-        };
-
-        function hideButtonQ3() {
-            $("#positiveBtn3").hide();
-            $("#neutralBtn3").hide();
-            $("#negativeBtn3").hide();
-        };
     </script>
     <!--[if lt IE 9]>
             <script src="assets/plugins/respond.js"></script>
